# DAILY_STUDY

./: .gitignore  01-37. 실수는 예방하는 것이 아니라 관리하는 것이다 - 1.md  01-39. 뛰어난 선생에 대한 미신 - 2.md  01-40. 뛰어난 선생에 대한 미신 - 3.md  01-42. 나홀로 전문가에 대한 미신 - 2.md  01-43. 나홀로 전문가에 대한 미신 - 3.md  06-5. 익숙한 도구들.md  readme.md  무제 파일.md
ES6/: 01. 기본 문법 정리.js  10. primitive and reference type.js  11. constructor+prototype.js  11. constructor.js  12. es5 상속.js  13. es6 상속.js  14. extends and super.js  15. getter setter.js  16. destructuring.js  17_0. import export main.js  17_0. import export main.mjs  17_1. importTarget.mjs  18. 동기 비동기 콜백함수.js  19. es6 promise.js  2. this 키워드를 알아보자.js  2. this 키워드를 알아보자_1.js  20. async await.js  21. for-in for-of.js  3. function vs Arrow function.js  3_1. arrow function 연습.js  (+8 more)
django/airbnb-clone-backend/: .gitignore  pyproject.toml  readme.md
django/airbnb-clone-backend/common/: models.py
django/airbnb-clone-backend/config/: settings.py  urls.py
django/airbnb-clone-backend/experiences/: admin.py  models.py
django/airbnb-clone-backend/experiences/migrations/: 0001_initial.py
django/airbnb-clone-backend/houses/: admin.py  models.py
django/airbnb-clone-backend/houses/migrations/: 0001_initial.py  0002_house_pets_allowed.py
django/airbnb-clone-backend/rooms/: models.py
django/airbnb-clone-backend/rooms/migrations/: 0001_initial.py  0002_room_amenities.py  0003_room_name.py  0004_alter_amenity_options.py
django/airbnb-clone-backend/users/: admin.py  models.py
django/airbnb-clone-backend/users/migrations/: 0001_initial.py  0002_alter_user_avatar.py
(+1239 files in other folders)
