[project]
name = "airbnb-clone-backend"
version = "0.1.0"
description = ""
authors = [
    {name = "Regular Kim",email = "regular.jk.kim@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "django (>=5.2.7,<6.0.0)",
    "pillow (>=12.0.0,<13.0.0)",
    "ruff (>=0.14.1,<0.15.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false